--- a/src/modal.html
+++ b/src/modal.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="modal.css">
 </head>
 <body>
+<div id="example-modal-content" class="modal-html-content">Modal content by html</div>
 <script src="modal.js" type="module"></script>
+<button id="test">Otwórz modal</button>
 </body>
 </html>
