--- a/src/modal.html
+++ b/src/modal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Modal example</title>
-    <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="example-modal-content" class="modal-html-content">Modal content by html</div>
