--- a/src/tooltip.html
+++ b/src/tooltip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="tooltip.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button data-tooltip="Lorem ipsum" class="tooltip-top">Test me</button>
