--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sklepik</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<form id="example-form">
-    <input type="text" id="input_one" required>
-    <input type="text" id="input_two">
-</form>
-<button id="send-me" disabled="disabled">Send me</button>
 <table id="user-table">
     <thead>
     <tr>
-        <th>Nazwa użytkownika</th>
-        <th>Adres email</th>
+        <th>Nazwa</th>
+        <th>Cena</th>
+        <th>Ilość</th>
     </tr>
     </thead>
     <tbody></tbody>
