--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <th>Cena</th>
         <th>Ilość</th>
         <th>Usuń</th>
+        <th>Edytuj</th>
     </tr>
     </thead>
     <tbody></tbody>
@@ -25,6 +26,7 @@
         <input type="text" id="name" placeholder="Nazwa artykułu" required>
         <input type="number" id="count" placeholder="Ilość" required>
         <input type="number" id="price" placeholder="Cena" required>
+        <input type="file" id="item-image" accept="image/*" placeholder="Obrazek" required>
     </form>
     <button id="send-item-button">Wyślij dane na serwer</button>
 </div>
